--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,62 @@
 .App {
+  margin: 5%;
   display: flex;
   flex-direction: row;
+  border-radius: 20px;
+  border: solid 5px black;
+  background-color: white;
+}
+#flex1{
+  flex-basis: 70%;
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 5%;
+  height: 140vh;
+  background-color: black;
+  border-radius: 20px;
+  border: solid 5px black;
+}
+#flex2{
+  flex-basis: 30%;
+  margin-top: 1%;
+  margin-right: 5%;
+  margin-bottom: 1%;
+  align-content: center;
+}
+.flex{
+  display: flex;
+  flex-direction: column;
+}
+.listElement{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+}
+.input{
+  background-color: #eff1f7;
+  border-radius: 100px;
+  border-style: none;
+  height: 50px;
+  width: 100%;
+}
+.borderBottom{
+  padding: 5%;
+  border-bottom: solid 1px black;
+  font-weight: 600;
+}
+.listOutsideElement{
+  height: 100px;
+  margin-bottom: 1%;
+}
+.tittle{
+  font-weight: 400;
+}
+.tittle2{
+  color: white;
+  font-weight: 450;
+  margin-left: 5%;
+  font-size: 60px;
+  padding-top: -2%;
 }
